# os

./: .gitignore  CMakeLists.txt  CPU.cpp  CPU.h  DataExchange.cpp  DataExchange.h  Interrupt.cpp  Interrupt.h  Logger.cpp  Logger.h  MemoryProxy.cpp  MemoryProxy.h  RAM.cpp  RAM.h  README.md  RM.cpp  RM.h  RealMachine.cpp  RealMachine.h  Swap.cpp  Swap.h  VM.cpp  VM.h  VirtualMachine.cpp  VirtualMachine.h  Word.cpp  Word.h  hdd.txt  main.cpp  shared.h
src/: CPU.java  Constants.java  DataExchange.java  ElementList.java  Kernel.java  Logger.java  Main.java  MemoryBlock.java  MemoryObject.java  MemoryProxy.java  MultiprogrammingOS.java  ProcessDescriptor.java  ProcessList.java  ProcessManager.java  ProcessManagerTest.java  ProcessState.java  ProgramInterrupt.java  RAM.java  RealMachine.java  RegisterImage.java  Resource.java  ResourceElement.java  ResourceList.java  SupervisorInterrupt.java  VirtualMachine.java  Word.java
src/Machine/: CPU.java  Constants.java  DataExchange.java  MemoryBlock.java  MemoryObject.java  MemoryProxy.java  ProgramInterrupt.java  RAM.java  RealMachine.java  RegisterImage.java  SupervisorInterrupt.java  VirtualMachine.java  Word.java
src/Processes/: Interrupt.java  JCL.java  JobGorvernor.java  JobGovernon.java  JobToSwap.java  Loader.java  MainProc.java  PrintLine.java  Process.java  ProcessDescriptor.java  ProcessList.java  ProcessManager.java  ProcessState.java  ReadFromInterface.java  ShutdownCallback.java  StartStop.java  TestProcess.java  VirtualMachine.java  WhileTrue.java
src/Resources/: DynamicResource.java  DynamicResourceName.java  (+25 more)
(+1 files in other folders)
